# python-gmail-export

./: .gitignore  LICENSE  README.md  email2pdf.py  example.py  example_airtable.py  example_simple.py  gmail_export.py  pyproject.toml
gmail_export/: __init__.py  __version__.py  api.py  cli.py  emails.py  labels.py  messages.py  threads.py  utils.py
gmail_export/templates/: email.html
templates/: email.html
templates/NotoSans/: NotoEmoji-Regular.base64
tests/: test_gmail_export.py
